<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="notification_icon"
        android:summary="@string/notification_icon_summary"
        android:title="@string/notification_icon_title" />

    <ListPreference
        android:dialogTitle="@string/pie_update_interval_summary"
        android:entries="@array/updateIntervalValues"
        android:entryValues="@array/updateIntervalValues"
        android:key="pie_update_interval"
        android:summary="@string/pie_update_interval_summary"
        android:title="@string/pie_update_interval_title" >
    </ListPreference>
    <ListPreference
        android:dialogTitle="@string/widget_update_interval_summary"
        android:entries="@array/widgetUpdateIntervals"
        android:entryValues="@array/widgetUpdateIntervals"
        android:key="widget_update_interval"
        android:summary="@string/widget_update_interval_summary"
        android:title="@string/widget_update_interval_title" >
    </ListPreference>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="vibrate_after_optimize"
        android:summary="@string/vibrate_after_optimize_summary"
        android:title="@string/vibrate_after_optimize_title" />

    <!--
    <PreferenceCategory android:title="Another category" >
        <EditTextPreference
            android:dialogTitle="Dialog Title"
            android:key="edittext_preference"
            android:summary="Summary"
            android:title="Title" />
    </PreferenceCategory>

    <CheckBoxPreference
        android:key="parent_checkbox_preference"
        android:summary="sum"
        android:title="title" />
    <CheckBoxPreference
        android:dependency="parent_checkbox_preference"
        android:key="child_checkbox_preference"
        android:layout="?android:attr/preferenceLayoutChild"
        android:summary="sum"
        android:title="t" />
    -->

</PreferenceScreen>