<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mainActionsFragmentWrapper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="2" >

    <LinearLayout
        android:id="@+id/llMainActionRow1"
        style="@style/MainActionRow2Elems" >

        <LinearLayout style="@style/MainActionWrapper" >

            <com.hasmobi.rambo.utils.custom_views.MainActionButton
                android:id="@+id/actOpenRunningApps"
                style="@style/MainActionButton"
                android:text="@string/running_processes" />

            <TextView
                android:id="@+id/tvMainActionsLabelRunningApps"
                style="@style/MainActionLabel"
                android:text="23 apps" />
        </LinearLayout>

        <LinearLayout style="@style/MainActionWrapper" >

            <com.hasmobi.rambo.utils.custom_views.MainActionButton
                android:id="@+id/actOpenPie"
                style="@style/MainActionButton"
                android:text="@string/memory_management" />

            <TextView
                android:id="@+id/tvMainActionsLabelPie"
                style="@style/MainActionLabel"
                android:text="23 apps" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMainActionRow2"
        style="@style/MainActionRow2Elems" >

        <LinearLayout style="@style/MainActionWrapper" >

            <com.hasmobi.rambo.utils.custom_views.MainActionButton
                android:id="@+id/actOpenWhitelist"
                style="@style/MainActionButton"
                android:text="@string/app_whitelist" />

            <TextView
                android:id="@+id/tvMainActionsLabelWhitelist"
                style="@style/MainActionLabel"
                android:text="23 apps" />
        </LinearLayout>

        <LinearLayout style="@style/MainActionWrapper" >

            <com.hasmobi.rambo.utils.custom_views.MainActionButton
                android:id="@+id/actOpenSettings"
                style="@style/MainActionButton"
                android:text="@string/action_settings" />

            <TextView
                android:id="@+id/tvMainActionsLabelSettings"
                style="@style/MainActionLabel"
                android:text="@string/manage_settings_label" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>