<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pieText"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff" >

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:onClick="onClick"
            android:paddingTop="@dimen/padding_medium"
            android:text="@string/app_name"
            android:textSize="@dimen/apptitle" >
        </TextView>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/mainFrame"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/aboutHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_large"
            android:gravity="center"
            android:text="@string/aboutText"
            android:textSize="@dimen/ram_figures"
            android:textStyle="italic"
            android:typeface="sans" >
        </TextView>

        <TextView
            android:id="@+id/aboutBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_medium"
            android:layout_marginLeft="@dimen/padding_medium"
            android:layout_marginRight="@dimen/padding_medium"
            android:autoLink="all"
            android:gravity="center"
            android:text="@string/aboutTextBody"
            android:textSize="@dimen/ram_figures"
            android:typeface="sans" >
        </TextView>
    </LinearLayout>

</LinearLayout>